--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -28224,11 +28224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 141,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T14:09:54.823846Z",
-     "start_time": "2020-05-14T14:09:54.817853Z"
+     "end_time": "2020-05-14T17:10:55.490409Z",
+     "start_time": "2020-05-14T17:10:55.484413Z"
     }
    },
    "outputs": [],
@@ -28238,11 +28238,148 @@
     "    This function creates 0/1 targets depending on the desired outcome\n",
     "    row (dataframe): row of a dataframe\n",
     "    '''\n",
-    "    if (row['Year'] >= 2010):\n",
+    "    if (row['Year'] > 2000):\n",
     "        target = 1\n",
     "    else:\n",
     "        target = 0\n",
     "    return target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-14T17:00:11.793421Z",
+     "start_time": "2020-05-14T17:00:11.770438Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Artist          3085\n",
+       "Title           3085\n",
+       "Album           3085\n",
+       "Producer        3085\n",
+       "Release Date    3085\n",
+       "URL             3085\n",
+       "Lyrics          3085\n",
+       "Word Count      3085\n",
+       "Year            3085\n",
+       "Decade          3085\n",
+       "Target          3085\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_decades[df_decades['Year'] <= 2000.0].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-14T17:07:11.175996Z",
+     "start_time": "2020-05-14T17:07:11.132026Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Artist          15385\n",
+       "Title           15385\n",
+       "Album           15385\n",
+       "Producer        15385\n",
+       "Release Date    15385\n",
+       "URL             15385\n",
+       "Lyrics          15385\n",
+       "Word Count      15385\n",
+       "Year            15385\n",
+       "Decade          15385\n",
+       "Target          15385\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_decades[df_decades['Year'] > 2000.0].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-14T16:57:52.471497Z",
+     "start_time": "2020-05-14T16:57:52.453509Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2019.0     690\n",
+       "2018.0     962\n",
+       "2017.0     998\n",
+       "2016.0    1186\n",
+       "2015.0    1535\n",
+       "2014.0    1186\n",
+       "2013.0    1253\n",
+       "2012.0    1159\n",
+       "2011.0    1081\n",
+       "2010.0     840\n",
+       "2009.0     739\n",
+       "2008.0     600\n",
+       "2007.0     582\n",
+       "2006.0     643\n",
+       "2005.0     413\n",
+       "2004.0     412\n",
+       "2003.0     302\n",
+       "2002.0     452\n",
+       "2001.0     352\n",
+       "2000.0     423\n",
+       "1999.0     359\n",
+       "1998.0     334\n",
+       "1997.0     289\n",
+       "1996.0     330\n",
+       "1995.0     170\n",
+       "1994.0     181\n",
+       "1993.0     281\n",
+       "1992.0     101\n",
+       "1991.0     151\n",
+       "1990.0     139\n",
+       "1989.0     115\n",
+       "1988.0      92\n",
+       "1987.0      43\n",
+       "1986.0      40\n",
+       "1985.0      22\n",
+       "1984.0       7\n",
+       "1983.0       4\n",
+       "1982.0       2\n",
+       "1977.0       1\n",
+       "1976.0       1\n",
+       "Name: Year, dtype: int64"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_decades['Year'].value_counts().sort_index(ascending=False)"
    ]
   },
   {
@@ -28274,11 +28411,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 142,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T14:10:53.716198Z",
-     "start_time": "2020-05-14T14:10:53.150674Z"
+     "end_time": "2020-05-14T17:11:09.737236Z",
+     "start_time": "2020-05-14T17:11:09.211542Z"
     }
    },
    "outputs": [
@@ -28301,23 +28438,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 143,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T14:12:17.845573Z",
-     "start_time": "2020-05-14T14:12:17.832580Z"
+     "end_time": "2020-05-14T17:11:16.215921Z",
+     "start_time": "2020-05-14T17:11:16.202930Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    10890\n",
-       "0     7580\n",
+       "1    15385\n",
+       "0     3085\n",
        "Name: Target, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28355,6 +28492,15 @@
    "source": [
     "X = df_decades['Lyrics']\n",
     "y = df_decades['Target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imbalanced-learn.ensemble import BalancedRandomForest"
    ]
   },
   {
