--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -28481,11 +28481,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 147,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T14:19:48.587198Z",
-     "start_time": "2020-05-14T14:19:48.581201Z"
+     "end_time": "2020-05-14T17:16:34.581590Z",
+     "start_time": "2020-05-14T17:16:34.575594Z"
     }
    },
    "outputs": [],
@@ -28496,20 +28496,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 146,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-14T17:16:02.782422Z",
+     "start_time": "2020-05-14T17:15:57.787724Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\Broderick\\anaconda3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
    "source": [
-    "from imbalanced-learn.ensemble import BalancedRandomForest"
+    "from imblearn.ensemble import BalancedRandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 148,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T14:20:02.608934Z",
-     "start_time": "2020-05-14T14:20:02.592940Z"
+     "end_time": "2020-05-14T17:16:56.468593Z",
+     "start_time": "2020-05-14T17:16:56.451610Z"
     }
    },
    "outputs": [],
@@ -28519,11 +28556,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 149,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T16:16:22.134999Z",
-     "start_time": "2020-05-14T16:16:22.115013Z"
+     "end_time": "2020-05-14T17:17:03.115436Z",
+     "start_time": "2020-05-14T17:17:03.108439Z"
     }
    },
    "outputs": [],
@@ -28536,11 +28573,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 150,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T15:09:15.668868Z",
-     "start_time": "2020-05-14T14:21:58.521192Z"
+     "end_time": "2020-05-14T18:06:13.925960Z",
+     "start_time": "2020-05-14T17:26:17.153096Z"
     }
    },
    "outputs": [],
@@ -28571,9 +28608,9 @@
    ],
    "source": [
     "# Random Forest\n",
-    "rfc = RandomForestClassifier(n_estimators=100,\n",
-    "                             max_depth=10,\n",
-    "                             random_state=0)\n",
+    "rfc = BalancedRandomForestClassifier(n_estimators=1000,\n",
+    "                                     max_depth=10,\n",
+    "                                     random_state=0)\n",
     "rfc.fit(X_train, y_train)\n",
     "y_predict = rfc.predict(X_test)\n",
     "print(accuracy_score(y_test, y_predict))\n",
