--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -27630,11 +27630,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 151,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T16:19:44.164282Z",
-     "start_time": "2020-05-14T16:19:44.155294Z"
+     "end_time": "2020-05-14T19:25:25.292941Z",
+     "start_time": "2020-05-14T19:25:25.200994Z"
     }
    },
    "outputs": [],
@@ -27644,7 +27644,8 @@
     "            'ah', 'um', 'umm', '’', 'na', 'nah', 'w/', 'yo', 'w',\n",
     "            'ooh', 'oooh', 'oohwee', 'oohweee', 'oo', 'ooo', 'oooo',\n",
     "            'fuck', 'shit', 'bitch', 'damn', 'hell', 'nigga', 'skrt',\n",
-    "            'skrrt', 'skrrrt', \"'s\", 'wow', 'skrrr', 'fucking', \"y'\"}\n",
+    "            'skrrt', 'skrrrt', \"'s\", 'wow', 'skrrr', 'fucking', \"y'\",\n",
+    "            'ya', \"'\", 'ayy', 'ass', 'niggas', 'uh', 'like'}\n",
     "stopwords = stop_words|rapwords"
    ]
   },
