few tweaks to models

--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -1476,10 +1476,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 55,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-14T23:19:51.081596Z",
+     "start_time": "2020-05-14T23:19:50.874708Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Lil Wayne     1131\n",
+       "Gucci Mane    1127\n",
+       "Chief Keef     792\n",
+       "The Game       696\n",
+       "Snoop Dogg     644\n",
+       "              ... \n",
+       "Eazy-E          70\n",
+       "Slick Rick      69\n",
+       "Heavy D         56\n",
+       "Cardi B         54\n",
+       "MC Hammer       46\n",
+       "Name: Artist, Length: 100, dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Artist'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
