--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -1471,22 +1471,115 @@
     }
    ],
    "source": [
-    "len(drakewords)"
+    "len(drakewords)\n",
+    "entities=[(i, i.label_, i.label) for i in doc.ents]\n",
+    "entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T04:08:28.124442Z",
+     "start_time": "2020-05-15T04:08:28.099456Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def plot_entities(df, artist):\n",
+    "    '''\n",
+    "    Given an artist, this function plots their 10 most used words, barring\n",
+    "    stop words.\n",
+    "\n",
+    "    Parameters:\n",
+    "    artist (string): the artist of interest\n",
+    "    df (dataframe): dataframe\n",
+    "    '''\n",
+    "\n",
+    "    ent_dict = dict()\n",
+    "    lyrics = \" \".join(df[df['Artist'] == artist]['Lyrics'].values)\n",
+    "    doc = nlp(lyrics)\n",
+    "    for ent in doc.ents:\n",
+    "        if ent.text.strip().lower() not in ent_dict.keys():\n",
+    "            ent_dict[ent.text.strip().lower()] = 1\n",
+    "        else:\n",
+    "            ent_dict[ent.text.strip().lower()] += 1\n",
+    "    sorted_ents = sorted(ent_dict.items(), key=lambda x: x[1],\n",
+    "                              reverse = True)\n",
+    "    ents = []\n",
+    "    vals = []\n",
+    "    for ent, val in sorted_ents:\n",
+    "        ents.append(ent)\n",
+    "        vals.append(vals)\n",
+    "    fig, ax = plt.subplots(figsize=(10,6))\n",
+    "    sns.barplot(x = ents[:10], y = vals[:10],\n",
+    "                palette = 'PuBu_r')\n",
+    "    ax.set_title(f'Most Named Entities by {artist}', size=18)\n",
+    "    ax.set_xlabel('Entity', size=14)\n",
+    "    ax.set_ylabel('Counts', size=14)\n",
+    "    plt.savefig(f'img/entities_{artist.lower()}.png')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-05-15T04:08:29.822Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "plot_entities(df, 'Drake')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 76,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T04:01:36.852326Z",
+     "start_time": "2020-05-15T04:01:36.828340Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "ent_dict = dict()\n",
+    "#lyrics = \" \".join(df[df['Artist'] == 'Cardi B']['Lyrics'].values)\n",
+    "#doc = nlp(lyrics)\n",
+    "for ent in doc.ents:\n",
+    "    if ent.text.strip().lower() not in ent_dict.keys():\n",
+    "        ent_dict[ent.text.strip().lower()] = 1\n",
+    "    else:\n",
+    "        ent_dict[ent.text.strip().lower()] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T04:06:37.639976Z",
+     "start_time": "2020-05-15T04:06:37.629982Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['cardi', 'rollin', 'lookin', 'killin', 'offset', '21', 'pussy', 'last night', 'bronx', 'woo', 'ran', 'nigga', 'ten', 'run', 'bentley', 'bitch', 'skrrt', 'guap', 'booty', 'ayy', 'cardi b', 'bardi', 'one', 'bitches', 'nine', 'everythin', 'new york', 'lil', 'un', 'hundred', 'two', 'flame', 'beyoncé', 'six', 'day 1', 'jeans', 'patek', 'bustin', 'said', \"said lil' bitch\", '2', 'kulture', 'guap-guap', 'ferrari', 'lo que quiera', 'fifty', 'gangsta bitch', 'three', 'yah', 'east coast', 'all night', 'molly', 'ksr', 'givenchy', 'gon', 'd', 'walkin', 'talkin', 'fuckin', 'woah', 'dapper', 'gucci', '50', 'gram', 'sleepin', 'first', 'actin', 'maybach', 'monday', 'friday', 'saturday', 'yo', 'ni aunque tú quieras', 'cardi b y de el trap', 'yo alante y tú', \"pa'\", 'mis', 'y mis cueros', 'mío lo que tú', 'tú y yo', 'de las', 'seven days', 'kodak', 'four', 'mario', '5 thousand', 'seein', 'boy', 'all day', 'ich', '6', 'rollie', 'tommy', 'thinkin', 'shake', 'boardin', 'mac', 'greek', 'shawty', 'dud', 'every week', 'ceilin', 'huncho', 'jesus', 'bon appétit', 'gettin', 'nah', 'sue', 'brrrt', 'huh', 'night', 'lamborghini', 'alright-alright', '40', 'kimbo', 'corny', '¿', 'vamo', 'taba', 'ando', 'andamo', 'tonight', 'yellow', 'jumpman', 'ig', '0 dollars', 'nemo', 'sittin', 'yuh', 'peanut', 'superman', 'gimme', 'five', 'seven', 'the week', 'eight', 'freddy kruger', 'jungs', 'papa', 'nein', 'gangsta', 'magic city', 'nights', 'verse', 'six months', 'p', 'mona scott', 'martian', 'mj', 'moonwalkin', 'saint laurent savage', 'aston', 'crippin', 'millions', 'fendi', 'poppin', 'cardi b cartier', 'currys', 'steph', 'ayesha', 'keisha', 'tlc', 'chillin', 'livin', 'm.o.', 'bruisin', 'losin', 'front', 'dasani', 'walk', 'follie', 'hammer', \"you'da\", 'freak', 'wakanda', 'monsta', 'vvs', 'ding dong', 'georgia', 'new bentley', 'a quarter', 'florida', 'dior', 'cardi andretti', 'm-m-m-murda', 'raf', 'my little fifteen minutes', '80', 'n-n-non', 'sprinter', 'kemba', \"fuck ya'\", 'anna mae', 'won mvp', '50 racks', 'every night', '57 90', 'breitling', 'breit', 'michael myers', 'a quarter million', 'feelin', 'splash', 'tryna', 'shootin', 'wearin', 'ken griffey', 'jiffy', 'draco', 'left eye', '1', '911', 'bras', 'wic', 'climbed', 'hoodie', 'shine', \"'08\", 'louboutin', 'igh', 'l', \"big pop'\", 'makaveli', \"little caesar's\", 'tom', 'jerry', 'the tay-k', 'iyanla', 'andre', 'venchy\\nreach', 'bron james', 'yoncé', 'dante', 'binderella', 'knowles', 'jamie foxx', 'hol', 'lawyer', 'brrrat', 'slim', 'knick-knack', 'stupid ho', '305', 'sec', 'vag', 'snap', 'angelina', '4', \"suck yo'\", 'dick', '9', '5', '10', 'instagram', 'third', 'flyer', 'grips', 'anbesol', 'tourin', 'nike tech', 'six seconds', 'vine', 'sues', 'y también yo sé', 'tú chapeando', 'yo llegando y', 'siempre', \"tan cansao' de mí en el\", 'quien yo le caiga mal', 'llevo', 'mis hijas', 'copian de mí', 'mira', 'tu', 'sé que lo tengo', 'yo se', 'el paso', 'yo le pido', 'compra mi cartera', 'y una', 'lo tengo tan', 'que hasta', 'soy la más', 'la calle', 'los dientes', 'pago la renta de mi madre', 'mejor que ni', 'suelta', 'créeme', 'y dejarme', \"que no '\", 'dique que estaba', 'lucas', 'un corito sano', 'lo que tu', 'yo lo', 'los cueros', 'messiah', 'de pinga', 'nos da y después', 'lo', 'pensaba que yo iba', 'hablan', 'a tu espalda y cuando te ven', 'diamond in playas club', '20', 'bullshit', 'weeks', 'cardi b to pm', 'the weeknd', 'today', 'babe', 'iffy', 'snip-snip', 'finish', 'mortal kombat', 'lady leshurr', 'swiftondemand', 'hella', 'kita', 'sweetness', 'ashanti', 'monopoly', 'the patek phillipe', 'bodak orange', 'bih', 'popo', 'thuggish', 'digital heights', 'john kennedy', 'mount everest', 'christian louboutin', 'stole', 'audi', 'tay-k', 'crack', 'jaguar f-type', 'hundreds', 'smokin', '200', 'night night', 'jack', 'til cocky bruk', 'gyal', 'don', 'woulda cry', 'nuh waa nuh', 'watchman weh', 'coronas', 'the night', 'ayo', 'nyc', 'swish', 'this year', 'showstopper', 'life', 'young cardi', 'travis scott', 'wantin', 'hurtin', 'the century', 'couple months', 'hahaha', 'blowin', 'dab', 'sub-zero', 'fuck', 'clip', '200 dollars', 'benjamin', 'motherfuckin', 'baby', 'shit', 'six three', 'sorry for your, loss\"', 'mayweather', \"5'3\", 'million dollar', 'signin', 'balenciagas', 'second', 'cardi bardi', 'spicy mami', 'hotter', 'somali', 'liebe', 'stille', 'hustle', 'hass', 'falschheit', 'blender', 'ganovenehre', 'leute', 'nicht quatschen', 'lieber stille', 'inkas', 'finca', 'meine gang regiert den plaza', 'mir nicht', 'pendejo', 'taschen', 'dinero', 'geld kommt', 'geld geht', 'familie', 'kreis', 'gesichter', 'gott sei dank', 'sich ins', 'ziele', 'courage', 'wölfe', 'noch beißen', 'köter', 'klasse', 'geld', 'heute', 'wagen', 'weil', 'weil wir', 'weil wir bizzy', 'meine devise', 'riesen', 'benza', 'siebener', 'das', 'leben', 'vom tatort\\ntatort', 'vom tatort', 'kilo für', 'wir', 'rolex am gelenk', 'zeit ist wertvoll', 'keine hunderttausend-euro-schecks', 'meine jungs', 'flex', 'doch ich', 'since day one', 'one year', 'boom', 'vroom', '30', 'stuntin', 'drizzy', '177th', 'a million dollars', 'bum', 'doobie', 'louis vuitton', '24', 'karat', 'the west coast', 'mariah carey', 'dominican', 'halle berry', 'balenciaga', 'fort lee', '123', 'abc', 'two whole weeks', 'eighteen', 'last year', '15k', '3 weeks', 'lee daniels', 'foreva', 'mm', 'bardi bardi', 'titties', 'bx', 'wack', 'benzes', 'thirty seconds', 'holdin', 'malcolm', \"a 'rari\", 'rari', 'percocets', 'playboi', 'carti', '__', '___', '___ with', 'bleach', 'branson forbes', 'call me cardi', '876', 'zero', 'brige', 'fourth', 'yea', 'swear', 'bronx bitch'])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_ents = sorted(ent_dict.items(), key=lambda x: x[1], reverse = True)\n",
+    "dict(sorted_ents).keys()"
+   ]
   },
   {
    "cell_type": "code",
