--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -28830,26 +28830,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-13T14:36:06.647072Z",
-     "start_time": "2020-05-13T14:26:15.769157Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Gradient Boosting\n",
-    "gbc = GradientBoostingClassifier(learning_rate=0.01,\n",
-    "                                 n_estimators=1000,\n",
-    "                                 random_state=0,\n",
-    "                                 max_depth=10)\n",
-    "gbc.fit(X_train, y_train)\n",
-    "y_predict = gbc.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 208,
    "metadata": {
     "ExecuteTime": {
@@ -29474,24 +29454,329 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-14T22:19:08.670Z"
+     "end_time": "2020-05-15T05:11:37.499203Z",
+     "start_time": "2020-05-15T04:10:48.762877Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8853997473380256\n",
+      "0.8947472745292369\n",
+      "0.9774794283239497\n"
+     ]
+    }
+   ],
    "source": [
     "# Gradient Boosting\n",
     "gbc = GradientBoostingClassifier(learning_rate=0.01,\n",
-    "                                 n_estimators=10000,\n",
+    "                                 n_estimators=1000,\n",
     "                                 random_state=0,\n",
     "                                 max_depth=10)\n",
     "gbc.fit(X_train, y_train)\n",
     "y_predict2 = gbc.predict(X_test)\n",
     "print(accuracy_score(y_test, y_predict2)) # TP + TN / Total\n",
     "print(precision_score(y_test, y_predict2)) # TP / TP + FP\n",
-    "print(recall_score(y_test, y_predict2)) # PT / TP + FN"
+    "print(recall_score(y_test, y_predict2)) # TP / TP + FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T05:36:42.999480Z",
+     "start_time": "2020-05-15T05:36:42.989484Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T05:36:54.392725Z",
+     "start_time": "2020-05-15T05:36:51.039654Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8891896769536185\n",
+      "0.8936295713723948\n",
+      "0.9841922910350801\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logistic Regression\n",
+    "lr = LogisticRegression(random_state=0,\n",
+    "                        n_jobs = -1)\n",
+    "lr.fit(X_train, y_train)\n",
+    "y_predict3 = lr.predict(X_test)\n",
+    "print(accuracy_score(y_test, y_predict3)) # TP + TN / Total\n",
+    "print(precision_score(y_test, y_predict3)) # TP / TP + FP\n",
+    "print(recall_score(y_test, y_predict3)) # TP / TP + FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T05:40:44.193905Z",
+     "start_time": "2020-05-15T05:40:42.570850Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8776394152680022\n",
+      "0.9641847313854854\n",
+      "0.8860978778692075\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logistic Regression (Balanced)\n",
+    "lrb = LogisticRegression(random_state=0,\n",
+    "                        n_jobs = -1,\n",
+    "                        class_weight='balanced')\n",
+    "lrb.fit(X_train, y_train)\n",
+    "y_predict4 = lrb.predict(X_test)\n",
+    "print(accuracy_score(y_test, y_predict4)) # TP + TN / Total\n",
+    "print(precision_score(y_test, y_predict4)) # TP / TP + FP\n",
+    "print(recall_score(y_test, y_predict4)) # TP / TP + FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T05:47:16.480524Z",
+     "start_time": "2020-05-15T05:47:16.458536Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T05:48:41.795782Z",
+     "start_time": "2020-05-15T05:48:41.724823Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8581483486735246\n",
+      "0.8583988028432473\n",
+      "0.9937202252057168\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Naive Bayes\n",
+    "nb = MultinomialNB()\n",
+    "nb.fit(X_train, y_train)\n",
+    "y_predict5 = nb.predict(X_test)\n",
+    "print(accuracy_score(y_test, y_predict5)) # TP + TN / Total\n",
+    "print(precision_score(y_test, y_predict5)) # TP / TP + FP\n",
+    "print(recall_score(y_test, y_predict5)) # TP / TP + FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T06:11:29.434897Z",
+     "start_time": "2020-05-15T06:11:29.429898Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.model_selection import cross_val_score, cross_validate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T06:15:34.414603Z",
+     "start_time": "2020-05-15T06:12:48.490861Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([44.02672172, 29.01034522, 29.32516432, 29.23021889, 28.75149345]),\n",
+       " 'score_time': array([1.05939341, 1.05839443, 1.21330476, 1.05339503, 1.0533967 ]),\n",
+       " 'test_accuracy': array([0.84300077, 0.84764114, 0.84764114, 0.84996133, 0.83558994]),\n",
+       " 'test_precision': array([0.96194503, 0.95881126, 0.9611956 , 0.96325459, 0.94953174]),\n",
+       " 'test_recall': array([0.84493965, 0.85376045, 0.85137018, 0.85229912, 0.84765444])}"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scoring = {'accuracy' : make_scorer(accuracy_score), \n",
+    "           'precision' : make_scorer(precision_score),\n",
+    "           'recall' : make_scorer(recall_score)}\n",
+    "\n",
+    "cross_validate(rfc, X_train, y_train, cv=5, scoring=scoring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T06:20:03.990257Z",
+     "start_time": "2020-05-15T06:20:00.862053Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.71858621, 0.53069592, 0.67461205, 0.47173142, 0.66261792]),\n",
+       " 'score_time': array([0.00699639, 0.00599575, 0.0059967 , 0.00899363, 0.00599623]),\n",
+       " 'test_accuracy': array([0.87935035, 0.88437742, 0.887471  , 0.88592421, 0.88355899]),\n",
+       " 'test_precision': array([0.88279302, 0.88888889, 0.89052013, 0.89099327, 0.88551207]),\n",
+       " 'test_recall': array([0.98607242, 0.98421541, 0.98606595, 0.98327915, 0.98792383])}"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression(random_state=0,\n",
+    "                        n_jobs = -1)\n",
+    "cross_validate(lr, X_train, y_train, cv=5, scoring=scoring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T06:20:28.730055Z",
+     "start_time": "2020-05-15T06:20:25.408961Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.66661596, 0.67761135, 0.68260932, 0.71758866, 0.50870776]),\n",
+       " 'score_time': array([0.00799584, 0.00599766, 0.00699759, 0.00799465, 0.00699592]),\n",
+       " 'test_accuracy': array([0.87819026, 0.88089714, 0.88128384, 0.89559165, 0.87698259]),\n",
+       " 'test_precision': array([0.95407407, 0.95647873, 0.96103896, 0.96129348, 0.95308642]),\n",
+       " 'test_recall': array([0.89693593, 0.89786444, 0.89363679, 0.91128658, 0.89642359])}"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lrb = LogisticRegression(random_state=0,\n",
+    "                        n_jobs = -1,\n",
+    "                        class_weight='balanced')\n",
+    "cross_validate(lrb, X_train, y_train, cv=5, scoring=scoring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T06:21:00.545983Z",
+     "start_time": "2020-05-15T06:21:00.269141Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.0399766 , 0.04097748, 0.03797865, 0.03297973, 0.03697824]),\n",
+       " 'score_time': array([0.01099634, 0.00699687, 0.01599169, 0.00799513, 0.00899649]),\n",
+       " 'test_accuracy': array([0.85614849, 0.85228152, 0.85344161, 0.85112142, 0.85029014]),\n",
+       " 'test_precision': array([0.85385226, 0.85130849, 0.85254372, 0.84996041, 0.85039683]),\n",
+       " 'test_recall': array([0.99814299, 0.99675023, 0.99628425, 0.99721319, 0.99535532])}"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb = MultinomialNB()\n",
+    "cross_validate(nb, X_train, y_train, cv=5, scoring=scoring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T06:30:05.436594Z",
+     "start_time": "2020-05-15T06:30:05.418606Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "post2000 = df_decades[df_decades['Target'] == 1]['Lyrics']\n",
+    "pre2000 = df_decades[df_decades['Target'] == 0]['Lyrics']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-05-15T06:34:46.549Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tfidf = TfidfVectorizer(tokenizer = spacy_tokenizer,\n",
+    "                        max_features = 10000,\n",
+    "                        max_df = 0.85,\n",
+    "                        lowercase = False)\n",
+    "post2000 = tfidf.fit_transform(post2000)"
    ]
   },
   {
@@ -29499,21 +29784,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "tfidf = TfidfVectorizer(tokenizer = spacy_tokenizer,\n",
+    "                        max_features = 5000,\n",
+    "                        max_df = 0.85,\n",
+    "                        lowercase = False)\n",
+    "post2000 = tfidf.fit_transform(post2000)"
+   ]
   },
   {
    "cell_type": "code",
