updated functions, added graphs

--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -27630,11 +27630,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 290,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T20:31:09.576796Z",
-     "start_time": "2020-05-14T20:31:09.565804Z"
+     "end_time": "2020-05-15T14:34:42.682138Z",
+     "start_time": "2020-05-15T14:34:42.673141Z"
     }
    },
    "outputs": [],
@@ -27646,17 +27646,17 @@
     "            'fuck', 'shit', 'bitch', 'damn', 'hell', 'nigga', 'skrt',\n",
     "            'skrrt', 'skrrrt', \"'s\", 'wow', 'skrrr', 'fucking', \"y'\",\n",
     "            'ya', \"'\", 'ayy', 'ass', 'niggas', 'uh', 'like', 'yo', 'hey',\n",
-    "            'motherfucker'}\n",
+    "            'motherfucker', 'pussy', 'ho', 'hoe'}\n",
     "stopwords = stop_words|rapwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 289,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T16:18:10.602119Z",
-     "start_time": "2020-05-14T16:18:10.593123Z"
+     "end_time": "2020-05-15T14:32:40.481523Z",
+     "start_time": "2020-05-15T14:32:40.470531Z"
     }
    },
    "outputs": [],
@@ -27668,6 +27668,16 @@
     "    Parameters:\n",
     "    song (string): dataframe\n",
     "    '''\n",
+    "    stop_words = spacy.lang.en.stop_words.STOP_WORDS\n",
+    "    rapwords = {'oh', 'aye', 'yeah', 'yuh', 'huh', 'ha', 'hah', 'ow',\n",
+    "                'ah', 'um', 'umm', '’', 'na', 'nah', 'w/', 'yo', 'w',\n",
+    "                'ooh', 'oooh', 'oohwee', 'oohweee', 'oo', 'ooo', 'oooo',\n",
+    "                'fuck', 'shit', 'bitch', 'damn', 'hell', 'nigga', 'skrt',\n",
+    "                'skrrt', 'skrrrt', \"'s\", 'wow', 'skrrr', 'fucking', \"y'\",\n",
+    "                'ya', \"'\", 'ayy', 'ass', 'niggas', 'uh', 'like', 'yo', 'hey',\n",
+    "                'motherfucker', 'pussy', 'ho'}\n",
+    "    stopwords = stop_words|rapwords\n",
+    "    \n",
     "    doc = nlp(song)\n",
     "    tokens = ([word.lemma_.lower().strip() for word in doc\n",
     "               if word.lemma_ != \"-PRON-\"\n",
@@ -29749,34 +29759,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 291,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-15T06:30:05.436594Z",
-     "start_time": "2020-05-15T06:30:05.418606Z"
+     "end_time": "2020-05-15T14:43:23.672051Z",
+     "start_time": "2020-05-15T14:35:08.694172Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pre2000 = df_decades[df_decades['Target'] == 0]['Lyrics']\n",
+    "tfidf = TfidfVectorizer(tokenizer = spacy_tokenizer,\n",
+    "                        max_features = 10000,\n",
+    "                        max_df = 0.85,\n",
+    "                        lowercase = False)\n",
+    "pre2000 = tfidf.fit_transform(pre2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T15:18:33.482048Z",
+     "start_time": "2020-05-15T14:43:31.606226Z"
     }
    },
    "outputs": [],
    "source": [
     "post2000 = df_decades[df_decades['Target'] == 1]['Lyrics']\n",
-    "pre2000 = df_decades[df_decades['Target'] == 0]['Lyrics']"
+    "tfidf2 = TfidfVectorizer(tokenizer = spacy_tokenizer,\n",
+    "                         max_features = 10000,\n",
+    "                         max_df = 0.85,\n",
+    "                         lowercase = False)\n",
+    "post2000 = tfidf2.fit_transform(post2000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 275,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-15T06:34:46.549Z"
+     "end_time": "2020-05-15T13:13:14.123893Z",
+     "start_time": "2020-05-15T13:13:14.112898Z"
     }
    },
    "outputs": [],
    "source": [
-    "tfidf = TfidfVectorizer(tokenizer = spacy_tokenizer,\n",
-    "                        max_features = 10000,\n",
-    "                        max_df = 0.85,\n",
-    "                        lowercase = False)\n",
-    "post2000 = tfidf.fit_transform(post2000)"
+    "from sklearn.decomposition import NMF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T15:18:43.179749Z",
+     "start_time": "2020-05-15T15:18:40.535439Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "nmf = NMF(n_components=10, max_iter=200)\n",
+    "nmf.fit(pre2000)\n",
+    "W = nmf.transform(pre2000)\n",
+    "H = nmf.components_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T15:18:50.021929Z",
+     "start_time": "2020-05-15T15:18:49.985947Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['life', 'world', 'time', 'live', 'die', 'god', 'day', 'livin',\n",
+       "        'black', 'change'],\n",
+       "       ['rock', 'rhyme', 'mc', 'mic', 'party', 'cause', 'rap', 'beat',\n",
+       "        'come', 'style'],\n",
+       "       ['love', 'girl', 'heart', 'need', 'cause', 'feel', 'feeling',\n",
+       "        'thing', 'true', 'lady'],\n",
+       "       ['hoe', 'money', 'hort', 'pimp', 'dick', 'game', 'cause',\n",
+       "        'player', 'short', 'big'],\n",
+       "       ['dogg', 'snoop', 'gangsta', 'doggy', 'g', 'pound', 'homie', 'o',\n",
+       "        'motherfuckin', 'cuz'],\n",
+       "       ['baby', 'know', 'want', 'let', 'girl', 'wanna', 'come', 'right',\n",
+       "        \"c'mon\", 'tell'],\n",
+       "       ['man', 'yo', 'know', 'ice', 'sayin', 'word', 'brother', 'black',\n",
+       "        'look', 'right'],\n",
+       "       ['tha', 'wit', 'lil', 'ta', 'money', 'hot', 'u', 'block', 'cuz',\n",
+       "        'da'],\n",
+       "       ['thug', 'come', 'gun', 'nigga', 'murder', 'bone', 'kill',\n",
+       "        'niggas', 'run', 'die'],\n",
+       "       ['la', 'da', 'world', 'de', 'bye', 'di', 'lah', 'body', 'plug',\n",
+       "        'fire']], dtype='<U26')"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(tfidf.get_feature_names())[np.argsort(-H)[:, 0:10]]"
    ]
   },
   {
@@ -29784,13 +29875,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "tfidf = TfidfVectorizer(tokenizer = spacy_tokenizer,\n",
-    "                        max_features = 5000,\n",
-    "                        max_df = 0.85,\n",
-    "                        lowercase = False)\n",
-    "post2000 = tfidf.fit_transform(post2000)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
